Melhorias Openapi/Swagger; Implementação de novos endpoints e aplicação de regras em serviço e repositório;
